exceptions y endpoints personalizados sucursales con posibles errores